# ligare

./: .gitignore  Cargo.toml  README.md  README_zh.md  flake.nix  test.lig
crates/ligare_backend_c/: Cargo.toml
crates/ligare_backend_c/src/: lib.rs
crates/ligare_backend_c/src/backend/: compile.rs  mod.rs
crates/ligare_backend_c/src/backend/c/: emitter.rs  expr.rs  mod.rs  names.rs  tests.rs  types.rs
crates/ligare_backend_c/src/backend/c/emitter/: allocation.rs  clone_helpers.rs
crates/ligare_backend_c/src/backend/c/expr/: aggregates.rs  calls.rs
crates/ligls/: Cargo.toml
crates/ligls/src/: ast.rs  backend.rs  cache.rs  completion.rs  diagnostics.rs  formatting.rs  lib.rs  main.rs  navigation.rs  parse.rs  project.rs  semantic.rs  service.rs  tests.rs
crates/ligls/src/cache/: compiler_cache.rs  diagnostics.rs  mod.rs  parsing.rs  rewrite.rs  update.rs
crates/ligls/src/completion/: collect.rs  context.rs  mod.rs  render.rs
crates/ligls/src/document/: diagnostics.rs  formatting.rs  mod.rs  text.rs
crates/ligls/src/navigation/: docs.rs  document.rs  index.rs  mod.rs  spans.rs  symbols.rs
crates/ligls/src/semantic/: classify.rs  mod.rs  model.rs  test_support.rs  tokens.rs
crates/ligls/src/server/: backend.rs  mod.rs  service.rs
crates/ligls/src/tests/: cache.rs  completion.rs  diagnostics.rs  formatting.rs  mod.rs  navigation.rs  parser.rs  semantic.rs
crates/ligls/src/workspace/: mod.rs
docs/: grammar.ebnf  ligare.tmLanguage.json
src/: backend.rs  commands.rs  compiler.rs  config.rs  format.rs  lib.rs  main.rs  pretty.rs
tests/: checker.rs  classify.rs  desugar.rs  desugar_extra.rs  doc_cli.rs  enum_tests.rs  eval.rs  generics.rs  generics_parser.rs  global_allocator.rs  interfaces.rs  ir_and_codegen.rs  metaprogramming.rs  modules.rs  nested_extreme.rs  package_manager.rs  parser.rs  pretty.rs  refinement.rs  struct_tests.rs  termination.rs  test_lig_smoke.rs  union_tests.rs  whnf.rs  (+1 more)
(+153 files in other folders)
