[package]
name = "ligare"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/ligls"]

[dependencies]
logos = "0.15"
clap = { version = "4", features = ["derive"] }
bumpalo = "3"
annotate-snippets = "0.12"
toml = "1.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
