[package]
name = "ligls"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3"
chumsky = "0.9.3"
ligare-doc = { path = "../ligare_doc" }
ligare-fmt = { path = "../ligare_fmt" }
ligare = { path = "../.." }
logos = "0.15"
tokio = { version = "1", features = ["io-std", "macros", "rt", "sync", "time"] }
tower-lsp = "0.20"
